--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "driver.js": "0.9.5",
     "dropzone": "5.5.1",
     "echarts": "4.2.1",
-    "element-ui": "2.7.0",
+    "element-ui": "2.9.2",
     "eslint-plugin-prettier": "^3.1.3",
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
@@ -70,6 +70,7 @@
     "vue-splitpane": "1.0.4",
     "vuedraggable": "2.20.0",
     "vuex": "3.1.0",
+    "vux": "^2.9.4",
     "xlsx": "0.14.1"
   },
   "devDependencies": {
