--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "file-saver": "2.0.1",
     "fuse.js": "3.4.4",
     "js-cookie": "2.2.0",
+    "js-md5": "^0.7.3",
+    "jsencrypt": "^3.0.0-rc.1",
     "jsonlint": "1.6.3",
     "jszip": "3.2.1",
     "normalize.css": "7.0.0",
@@ -91,6 +93,7 @@
     "chokidar": "2.1.5",
     "connect": "3.6.6",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
@@ -98,6 +101,7 @@
     "mockjs": "1.0.1-beta3",
     "node-sass": "^4.9.0",
     "plop": "2.3.0",
+    "prettier-eslint-cli": "^5.0.0",
     "runjs": "^4.3.2",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
