--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "test:ci": "npm run lint && npm run test:unit",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
-    "new": "plop",
-    "eslint-fix": "eslint src/**/**/*.vue --fix",
-    "format-code": "prettier-eslint --write \"src/**/*.js\" \"src/**/*.vue\""
+    "new": "plop"
   },
   "husky": {
     "hooks": {
